--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/sqiao7",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sqiao7/koishi-adapter-wechat-ferry.git"
+    "url": "git+https://github.com/sqiao7/koishi-plugin-adapter-wcferry"
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
